[package]
name = "lua-load-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
clap = { version = "3.0", features = ["derive"] }
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
mlua = { version = "0.7", features = ["async", "lua53", "serialize", "vendored"] }
procfs = "0.12"
tokio = { version = "1.15", features = ["io-util", "fs", "macros", "rt", "time"] }
zip = "0.5"
